[package]
name = "stardust-nft-auction"
version = "0.1.0"
authors = []
edition = "2018"
description = "Stardust NFT Auctions"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
schemars = "0.8.1"
terraswap = "2.4.0"
cw20-base = { version = "0.8.0", features = ["library"] }
cw721 = "0.8.0"
cw-storage-plus = { version = "0.8.0" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
hex = "0.4.2"
lazy_static = "1.4.0"
stardust-protocol = { version = "1.0.0", path = "../../packages/stardust_protocol" }

[dev-dependencies]
serde_json = "1.0"